@@ -1,5 +1,11 @@
 2006-07-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* include/thailib.h: Add main page using content from libthai.3.
+
+	* man/man3/libthai.3: Fix typos.
+
+2006-07-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* include/thai/{thbrk,thcoll}.h: Fix typos in comments.
 
 	* include/thai/{thwbrk,thwchar,thwcoll,thwctype,thwstr}.h:
@@ -857,13 +863,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.84 2006-07-31 12:54:02 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.85 2006-07-31 13:55:51 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.84 2006-07-31 12:54:02 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.85 2006-07-31 13:55:51 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
